--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env $(cat .env) nodemon index.js"
+    "build:css": "postcss ./src/css/styles.css --use precss --use autoprefixer --output public/css/styles.css",
+    "dev": "npm run build:css -- -w & env $(cat .env) nodemon index.js"
   },
   "keywords": [],
   "author": "Ray Farias <rayrfarias@gmail.com> (http://github.com/sgnl)",
@@ -21,6 +22,10 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "autoprefixer": "^6.7.7",
+    "cssnano": "^3.10.0",
+    "nodemon": "^1.11.0",
+    "postcss-cli": "^3.0.0",
+    "precss": "^1.4.0"
   }
 }
