--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "postcss ./src/css/styles.css --use precss --use autoprefixer --output public/css/styles.css",
     "dev": "npm run build:css -- -w & env $(cat .env) nodemon index.js",
-    "start": "npm run build:css && node index.js",
+    "start": "node index.js",
     "now:deploy": "env $(cat .env) now -e MONGO_USER -e MONGO_PASSWORD -e MONGO_URL -e ENVIRONMENT=PRODUCTION"
   },
   "keywords": [],
